infrastructure/configs/base/hashicorp-vault/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hashicorp-vault-httproute
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames:
  - vault.nishantlabs.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: hashicorp-vault
      port: 8200
